fix(Accordion): avoid page breaks in print for Accordion and SummaryAccordion

--- a/src/layout/Accordion/Accordion.module.css
+++ b/src/layout/Accordion/Accordion.module.css
@@ -2,4 +2,8 @@
   .accordion h2 > button {
     display: unset !important;
   }
+
+  .container {
+    break-inside: avoid;
+  }
 }
